fixing overflow-x in mobile and tablet

--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,13 @@ html {
   font-weight: 400;
   font-style: normal;
   font-size: 62.5%;
+
 }
 
 body {
   margin: 0;
   padding: 0;
- overflow-x: hidden !important;
+
 }
 
 header {
@@ -265,7 +266,7 @@ column-gap: clamp(1rem, 2vw, 3rem);
     padding: 3rem;
     margin-bottom: 2rem;
     border: 1px solid #ffe492;
-    width: 100%;
+    max-width: 100%;
     transition: all 0.3s ease;
   }
   .pricing__price {
@@ -574,7 +575,7 @@ margin: 0 1rem;
 
   top: -100rem;
   left: 0;
-  width: 100%;
+  max-width: 100%;
   height: auto;
   background-color: #043873;
   z-index: 2;
@@ -665,13 +666,11 @@ margin: 0 1rem;
     max-width: 33.3333%;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 768px){
   html {
     font-size: 56.25%;
   }
-    *::after {
-    display: none !important;
-  }
+   
    .col-xl-2,
   .col-xl-3,
   .col-xl-4,
@@ -685,6 +684,7 @@ margin: 0 1rem;
     padding: 0;
     margin: 0 2rem;
     position: relative;
+    overflow-x: hidden;
   }
   .hero-section__title,
   .feature__title,
@@ -741,7 +741,6 @@ margin: 0 1rem;
   .extension__title-highlight::after {
     content: "";
     max-width: 100%;
-    width: 100%;
     height: 1.7rem;
     background: url("Image/Vector.png") no-repeat;
     background-size: contain;
@@ -794,7 +793,7 @@ margin: 0 1rem;
   }
   .navbar__nav {
     flex-direction: column;
-    width: 100%;
+    max-width: 100%;
   }
   .nav__toggle {
     display: block;
@@ -876,14 +875,14 @@ margin: 0 1rem;
   html {
     font-size: 45%;
   }
-       *::after {
-    display: none !important;
-  }
+  
   .container {
     max-width: 90vw;
     margin: 0 2rem;
     padding: 0 ;
     position: relative;
+    overflow-x: hidden;
+    
   }
    .hero-section__title,
   .feature__title,
@@ -990,7 +989,7 @@ transform: translateY(1rem);
 .feature__title-highlight::after {
   content: "";
         display: block;
-        width: 100%;
+      max-width: 100%;
         height: 1.5rem;
         background: url(Image/Vector.png) no-repeat;
         margin-top: -1rem;
@@ -1006,7 +1005,7 @@ transform: translateY(1rem);
  .extension__title-highlight::after {
     content: "";
     display: block;
-    width: 100%;
+    max-width: 100%;
     height: 1.5rem;
     background: url("Image/Vector.png") no-repeat;
     margin-top: -1rem;
@@ -1018,7 +1017,7 @@ transform: translateY(1rem);
   .pricing__title--highlight::after {
     content: "";
     display: block;
-    width: 100%;
+    max-width: 100%;
     height: 1.5rem;
     background: url("Image/Vector.png") no-repeat;
     margin-top: -1rem;
@@ -1031,7 +1030,7 @@ transform: translateY(1rem);
   .sponsors__highlight::after {
     content: "";
     display: block;
-    width: 100%;
+   max-width: 100%;
     height: 1.5rem;
     background: url("Image/Vector.png") no-repeat;
     margin-top: -1rem;
@@ -1044,7 +1043,7 @@ transform: translateY(1rem);
   .testimonials__highlight::after {
     content: "";
     display: block;
-    width: 100%;
+    max-width: 100%;
     height: 1rem;
     background: url("Image/Vector.png") no-repeat;
     margin-top: -1rem;
